--- a/ejercicio2-html-y-css/styles.css
+++ b/ejercicio2-html-y-css/styles.css
@@ -40,7 +40,7 @@ input[type="text"],input[type="password"]  {
 
 select {
     padding: 5;
-    width: 35%;
+    width: 100%;
 }
 
 /*input[type="checkbox"] {
@@ -56,7 +56,7 @@ label[for='email'],label[for='password'],label[for='gender'],label[for='terms']{
 
 
 button{
-    
+    margin: 10px 0;
     padding:2.5px 2.5px;
 }
 
